--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ a {
 		text-decoration: underline;
 	}
 
+.content a {
+	color: rgb(218, 23, 5);
+}
+
 h1,h2,h3,h4,h5,h6 {
 	font-variant: small-caps;
 }
